[project]
name = "labelbench"
version = "0.1.0"
description = "Lightweight annotation tool for LLM evaluation datasets"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
